--- a/builtins/Makefile.in
+++ b/builtins/Makefile.in
@@ -116,7 +116,7 @@ RL_LIBSRC = $(topdir)/lib/readline
 .def.o:
 	$(RM) $@
 	./$(MKBUILTINS) $(DIRECTDEFINE) $<
-	$(CC) -c $(CCFLAGS) $*.c || ( $(RM) $*.c ; exit 1 )
+	$(CC) -c -g3 -O0 $(CCFLAGS) $*.c || ( $(RM) $*.c ; exit 1 )
 	$(RM) $*.c
 
 # How to make a .c file from a .def file.
@@ -127,7 +127,7 @@ RL_LIBSRC = $(topdir)/lib/readline
 # default rule for making a .o file from a .c file
 .c.o:
 	$(RM) $@
-	$(CC) -c $(CCFLAGS) $<
+	$(CC) -c -g3 -O0 $(CCFLAGS) $<
 
 DEFSRC =  $(srcdir)/alias.def $(srcdir)/bind.def $(srcdir)/break.def \
 	  $(srcdir)/builtin.def $(srcdir)/caller.def \
@@ -179,7 +179,7 @@ tmpbuiltins.h:	tmpbuiltins.c
 gen-helpfiles.o: ../config.h
 gen-helpfiles.o: gen-helpfiles.c
 	$(RM) $@
-	$(CC_FOR_BUILD) -c $(CCFLAGS_FOR_BUILD) $<
+	$(CC_FOR_BUILD) -c -g3 -O0 $(CCFLAGS_FOR_BUILD) $<
 
 gen-helpfiles:	tmpbuiltins.o gen-helpfiles.o
 	$(CC_FOR_BUILD) ${CCFLAGS_FOR_BUILD} $(LDFLAGS_FOR_BUILD) -o $@ gen-helpfiles.o tmpbuiltins.o $(LIBS_FOR_BUILD)
@@ -217,7 +217,7 @@ install:	@HELPINSTALL@
 mkbuiltins.o: ../config.h
 mkbuiltins.o: mkbuiltins.c
 	$(RM) $@
-	$(CC_FOR_BUILD) -c $(CCFLAGS_FOR_BUILD) $<
+	$(CC_FOR_BUILD) -c -g3 -O0 $(CCFLAGS_FOR_BUILD) $<
 
 mkbuiltins$(EXEEXT): mkbuiltins.o
 	$(CC_FOR_BUILD) $(LDFLAGS_FOR_BUILD) -o $(MKBUILTINS) mkbuiltins.o $(LIBS_FOR_BUILD)
